--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 								<img src="img/portfolio/thumbnails/asu_th.png">
 
 								<div class="icons">
-									<a href="img/portfolio/asu.png" title="View image" class="openButton" data-fancybox data-caption="Dog">
+									<a href="img/portfolio/asu.png" title="View image" class="openButton" data-fancybox data-caption="Master's Transcript">
 										<i class="fa fa-search"></i>
 									</a>
 									<a href="https://transcriptgraduate.tiiny.site/" target="_blank" class="projectLink">
@@ -379,7 +379,7 @@
 								<img src="img/portfolio/thumbnails/me1_th.jpeg">
 
 								<div class="icons">
-									<a href="img/portfolio/me1.jpeg" title="View image" class="openButton" data-fancybox data-caption="Dog">
+									<a href="img/portfolio/me1.jpeg" title="View image" class="openButton" data-fancybox data-caption="Myself">
 										<i class="fa fa-search"></i>
 									</a>
 									<a href="" target="_blank" class="projectLink">
@@ -401,7 +401,7 @@
 								<img src="img/portfolio/thumbnails/me2_th.jpeg">
 
 								<div class="icons">
-									<a href="img/portfolio/me2.jpeg" title="View image" class="openButton" data-fancybox data-caption="Dog">
+									<a href="img/portfolio/me2.jpeg" title="View image" class="openButton" data-fancybox data-caption="Myself">
 										<i class="fa fa-search"></i>
 									</a>
 									<a href="" target="_blank" class="projectLink">
@@ -423,7 +423,7 @@
 								<img src="img/portfolio/thumbnails/aws_th.png">
 
 								<div class="icons">
-									<a href="img/portfolio/aws.png" title="View image" class="openButton" data-fancybox data-caption="Dog">
+									<a href="img/portfolio/aws.png" title="View image" class="openButton" data-fancybox data-caption="AWS Certfied Solutions Architect">
 										<i class="fa fa-search"></i>
 									</a>
 									<a href="https://cp.certmetrics.com/amazon/en/public/verify/credential/fbe3e66bd3f34f108d3fe2d9ad758525" target="_blank" class="projectLink">
@@ -445,7 +445,7 @@
 								<img src="img/portfolio/thumbnails/udemy_th.png">
 
 								<div class="icons">
-									<a href="img/portfolio/udemy.png" title="View image" class="openButton" data-fancybox data-caption="Dog">
+									<a href="img/portfolio/udemy.png" title="View image" class="openButton" data-fancybox data-caption="Java Programming Masterclass">
 										<i class="fa fa-search"></i>
 									</a>
 									<a href="https://www.udemy.com/certificate/UC-d2a328e9-5bb2-49d4-8b2d-4e5fe767895a/" target="_blank" class="projectLink">
@@ -467,7 +467,7 @@
 								<img src="img/portfolio/thumbnails/udemy_th.png">
 
 								<div class="icons">
-									<a href="img/portfolio/udemy.png" title="View image" class="openButton" data-fancybox data-caption="Dog">
+									<a href="img/portfolio/udemy.png" title="View image" class="openButton" data-fancybox data-caption="DevOps Beginner to Advanced with Projects">
 										<i class="fa fa-search"></i>
 									</a>
 									<a href="https://www.udemy.com/certificate/UC-cb0c247f-3406-40dc-923c-80cf14ab0b84/" target="_blank" class="projectLink">
@@ -490,7 +490,7 @@
 								<img src="img/portfolio/thumbnails/udemy_th.png">
 
 								<div class="icons">
-									<a href="img/portfolio/udemy.png" title="View image" class="openButton" data-fancybox data-caption="Dog">
+									<a href="img/portfolio/udemy.png" title="View image" class="openButton" data-fancybox data-caption="Learn C++ Programming-Beginner to Advanced">
 										<i class="fa fa-search"></i>
 									</a>
 									<a href="https://www.udemy.com/certificate/UC-ff928710-d68b-479a-a4fa-4e13b27ccd10/" target="_blank" class="projectLink">
@@ -513,7 +513,7 @@
 								<img src="img/portfolio/linkedin.png">
 
 								<div class="icons">
-									<a href="img/portfolio/linkedin.png" title="View image" class="openButton" data-fancybox data-caption="Dog">
+									<a href="img/portfolio/linkedin.png" title="View image" class="openButton" data-fancybox data-caption="Angular Essential Training">
 										<i class="fa fa-search"></i>
 									</a>
 									<a href="https://www.linkedin.com/learning/certificates/6c7878cb90f0c048e660bc71dd64048aa620d1f5dd19bba0511759bc2aec40d8?trk=share_certificate" target="_blank" class="projectLink">
@@ -535,7 +535,7 @@
 								<img src="img/portfolio/linkedin.png">
 
 								<div class="icons">
-									<a href="img/portfolio/linkedin.png" title="View image" class="openButton" data-fancybox data-caption="Dog">
+									<a href="img/portfolio/linkedin.png" title="View image" class="openButton" data-fancybox data-caption="HTML, CSS and Generative AI: Speed Up Your Process">
 										<i class="fa fa-search"></i>
 									</a>
 									<a href="https://www.linkedin.com/learning/certificates/05e142674edde088b5149f6e4321ab27a66332044778ba11239c0d6f639e44fd?trk=share_certificate" target="_blank" class="projectLink">
