--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
 			<p class="subHeading">Want to contact me?</p>
 			<h2>I'd love to hear from you!</h2>
 			<a href="mailTo:nakkapavankalyan28@gmail.com" class="contactButton">GET IN TOUCH!</a>
+			<a href="img/PavanKalyanNakka_Resume.pdf" class="resumeButton" download>DOWNLOAD RESUME</a>
 			
 		</div>
 	</div>
