--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
 	      <li class="nav-item">
 	        <a class="nav-link" href="#portfolio">Achievements</a>
 	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="https://www.linkedin.com/in/pavan-kalyan-nakka/" target="_blank">LinkedIn</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="https://github.com/pavankalyanrepo28" target="_blank">GitHub</a>
+	      </li>
 	    </ul>
 	  </div>
 
